# Rekep-ur5

./: .gitignore  README.md  camera_test.py  constraint_generation.py  environment.py  integrated_pipeline.py  keypoint_capture.py  keypoint_proposal.py  keypoint_tracker.py  keypoint_workflow_example.py  main.py  main_real.py  pyproject.toml  real_action.py  real_cam_utils.py  real_camera.py  real_vision.py  robot_state.json  test.py  ur5_action.py  utils.py  visualization.py
cam_env/calibration/: auto_callibration.py  calculate_intrinsics.py  camera_manager.py  debug_decorators.py  pixi.toml  pyproject.toml  realsense_camera.py  registered_camera.csv  visualizer.py  标定流程.txt
cam_env/easy_handeye/: camera_1.yaml  camera_2.yaml  easy_handeye_eye_on_hand.yaml  wrist_to_d435.tf
configs/: config.yaml
data/: api_response.json  end_effector_poses.json
data/realsense_captures/: varied_camera_depth.npy
embodied_gaussian/objects/: tblock.json
embodied_gaussian/scripts/: keypoint_trans.py  utils.py
outputs/: action.json
realsense_captures/: varied_camera_depth.npy
realsense_captures/intrinsics/: color_intrin_20250203_151052.txt  color_intrin_20250303_172034.txt  depth_intrin_20250203_151052.txt  depth_intrin_20250303_172034.txt
rekep/: path_solver.py
rekep/perception/: gdino.py
ur_env/: move_ur5.py  simle_convert.py  ur5_env.py  ur_camera_control.py  vacuum_gripper.py
vlm_query/: prompt_template.txt
vlm_query/2025-01-13_14-23-40_reorient_the_red_pen_and_drop_it_upright_into_the_black_pen_holder/: metadata.json  output_raw.txt  stage2_subgoal_constraints.txt  stage3_subgoal_constraints.txt
vlm_query/2025-01-16_14-22-45_reorient_the_red_pen_and_drop_it_upright_into_the_black_pen_holder/: metadata.json  output_raw.txt  (+5 more)
(+165 files in other folders)
