[project]
name = "Rekep-ur5"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyrealsense2>=2.55.1.6486,<3", "opencv-python", "openai>=1.78.1,<2", "kmeans-pytorch>=0.3,<0.4", "numba>=0.61.2,<0.62", "open3d>=0.18.0,<0.19", "rich>=14.0.0,<15", "parse>=1.20.2,<2", "dds-cloudapi-sdk>=0.4.1,<0.5", "imageio>=2.37.0,<3", "ur-rtde>=1.6.1,<2", "pycocotools>=2.0.10,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
rekep_ur5 = { path = ".", editable = true }
torch = { version = "*", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cu124" }
torchaudio = { version = "*", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
numpy = ">=2.2.5,<3"
supervision = ">=0.25.1,<0.26"
scikit-learn = ">=1.6.1,<2"

[tool.pixi.system-requirements]
cuda = "12.4"
