[project]
authors = [{name = "heyjiacheng", email = "your_xujiacheng1016@hotmail.com"}]
name = "calibration"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyrealsense2>=2.55.1.6486,<3", "opencv-python>=4.11.0.86,<5", "pynput>=1.8.1,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
calibration = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
scikit-learn = ">=1.6.1,<2"
pandas = ">=2.2.3,<3"
